--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@ tools:context=".MainActivity">
         android:text="@string/message_welcome"
         android:textColor="@android:color/black"
         android:textStyle="bold"
-        android:textSize="48sp" />
+        android:textSize="48dp" />
 
 </RelativeLayout>
 
@@ -45,7 +45,7 @@ tools:context=".MainActivity">
         android:minHeight="32dp"
         android:text="@string/button_update_allowance"
         android:textColor="@android:color/black"
-        android:textSize="30sp" />
+        android:textSize="30dp" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -61,7 +61,7 @@ tools:context=".MainActivity">
             android:minHeight="32dp"
             android:text="@string/button_update_expense"
             android:textColor="@android:color/black"
-            android:textSize="30sp" />
+            android:textSize="30dp" />
     </RelativeLayout>
 </RelativeLayout>
 
