--- a/app/src/main/res/layout/activity_update_allowance.xml
+++ b/app/src/main/res/layout/activity_update_allowance.xml
@@ -26,7 +26,7 @@
             android:gravity="center"
             android:text="@string/message_allowance_details"
             android:textColor="@android:color/black"
-            android:textSize="40sp"/>
+            android:textSize="40dp"/>
     </RelativeLayout>
 
     <RelativeLayout
@@ -50,7 +50,7 @@
                 android:text="@string/message_current_balance"
                 android:textAllCaps="false"
                 android:textColor="@android:color/black"
-                android:textSize="24sp"
+                android:textSize="24dp"
                 android:textStyle="bold" />
 
             <TextView
@@ -87,7 +87,7 @@
                 android:text="@string/message_allowance_receive"
                 android:textAllCaps="false"
                 android:textColor="@android:color/black"
-                android:textSize="24sp"
+                android:textSize="24dp"
                 android:textStyle="bold" />
 
             <EditText
