MyAllowanceManager_25-4-2020-Changed input type for Update Allowance entry. Updated comments for UpdateAllowance source code for future documentation purpose.

--- a/app/src/main/res/layout/activity_update_allowance.xml
+++ b/app/src/main/res/layout/activity_update_allowance.xml
@@ -98,6 +98,8 @@
                 android:layout_below="@+id/label_allowance_received"
                 android:textSize="24dp"
                 android:textStyle="bold"
+                android:inputType="number"
+                android:hint="@string/allowance_entry_type"
                 />
         </RelativeLayout>
 
