MyAllowanceManager_25-4-2020-Changed input type for Update Expense entry. Updated comments for UpdateExpense source code for future documentation purpose.

--- a/app/src/main/res/layout/activity_update_allowance.xml
+++ b/app/src/main/res/layout/activity_update_allowance.xml
@@ -99,7 +99,7 @@
                 android:textSize="24dp"
                 android:textStyle="bold"
                 android:inputType="number"
-                android:hint="@string/allowance_entry_type"
+                android:hint="@string/input_entry_type"
                 />
         </RelativeLayout>
 
